# face_tracking

./: .gitignore  README.md  pairs.txt  pyproject.toml  requirements.txt
assets/: flame_mirror_index.npy  flame_vertex_weights.npy
configs/: base.yaml  tracking.yaml
face_tracking/: __init__.py  api.py  env_paths.py
face_tracking/lightning/: p3dmm_network.py  p3dmm_system.py  utils.py
face_tracking/preprocessing/: crop.py  cropper.py  cropping.py  face_analysis.py  landmark_runner.py  network_inference.py  segmentation.py
face_tracking/preprocessing/SegFace/: __init__.py  face_parser.py  segface_celeb.py  utils_models.py
face_tracking/tools/: rsh.py
face_tracking/tracking/: __init__.py  losses.py  nvdiffrast_util.py  opt_post.py  opt_pre.py  renderer_nvdiffrast.py  run_track.py  tracker.py  util.py
face_tracking/tracking/flame/: FLAME.py  __init__.py  vertices2joints.py
face_tracking/utils/: device.py  masking.py  misc.py  obj_util.py  rotation_6d_to_matrix.py  utils_3d.py  vis_kp.py
scripts/: download_weights.sh  track_batch.py  track_distributed.py  track_video.py
