[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face_tracking"
version = "0.1.0"
description = "Open-source video face tracking pipeline based on Pixel3DMM."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-NC-4.0" }
authors = [
    { name = "Bojun Xiong" },
]
keywords = ["face tracking", "FLAME", "Pixel3DMM", "3DMM"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
"Source" = "https://github.com/your-org/face_tracking"

[project.scripts]
face-track-video = "scripts.track_video:main"
face-track-batch = "scripts.track_batch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["face_tracking*"]
